--- a/examples/quickstart/Dockerfile
+++ b/examples/quickstart/Dockerfile
@@ -5,8 +5,8 @@ FROM python:3.11-slim
 RUN apt-get update && apt-get install -y \
     build-essential \
     curl \
-    build-essential \
     libgl1 \
+    libgl1-mesa-glx \
     libglib2.0-0 \
     libsm6 \
     libxext6 \
