--- a/examples/quickstart/env.example
+++ b/examples/quickstart/env.example
@@ -1,6 +1,14 @@
+# LiveKit Cloud Configuration (REQUIRED)
+LIVEKIT_URL=wss://your-project.livekit.cloud
+LIVEKIT_API_KEY=your_livekit_api_key
+LIVEKIT_API_SECRET=your_livekit_api_secret
+
+# AI Service API Keys (REQUIRED)
 DEEPGRAM_API_KEY=your_deepgram_api_key
 OPENAI_API_KEY=your_openai_api_key
 CARTESIA_API_KEY=your_cartesia_api_key
 
-# Optional: Connect via Daily WebRTC locally
-DAILY_API_KEY=your_daily_api_key
+# Server Configuration (Optional)
+HOST=0.0.0.0
+PORT=7860
+LOG_LEVEL=INFO
