Fix port binding - let bot.py handle Render's PORT automatically

--- a/examples/quickstart/Dockerfile
+++ b/examples/quickstart/Dockerfile
@@ -21,23 +21,24 @@ ENV UV_COMPILE_BYTECODE=1
 # Copy from the cache instead of linking since it's a mounted volume
 ENV UV_LINK_MODE=copy
 
-# Install the project's dependencies using the lockfile and settings
-RUN --mount=type=cache,target=/root/.cache/uv \
-    --mount=type=bind,source=uv.lock,target=uv.lock \
-    --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-    uv sync --locked --no-install-project --no-dev
-
-# Set working directory
+# Set working directory first
 WORKDIR /app
+
+# Copy project files first (needed for uv sync)
+COPY ./pyproject.toml pyproject.toml
+COPY ./uv.lock uv.lock
+
+# Install dependencies using the lockfile (creates venv at .venv)
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync --locked --no-install-project --no-dev
 
 # Copy the application code
 COPY ./main.py main.py
 COPY ./agent.py agent.py
-COPY ./pyproject.toml pyproject.toml
 
 # Expose the port the server runs on (default 7860, Render will override with PORT env var)
 EXPOSE 7860
 
-# Run the FastAPI server using Python directly
+# Run the FastAPI server using uv run (automatically uses the virtual environment)
 # Use shell form to ensure environment variables are passed through
-CMD sh -c 'python main.py'
+CMD sh -c 'uv run main.py'
