Fix port binding - let bot.py handle Render's PORT automatically

--- a/examples/quickstart/Dockerfile
+++ b/examples/quickstart/Dockerfile
@@ -37,6 +37,7 @@ RUN --mount=type=cache,target=/root/.cache/uv \
 # Copy the application code
 COPY ./main.py main.py
 COPY ./agent.py agent.py
+COPY ./bot.py bot.py
 COPY ./static ./static
 
 # Expose the port the server runs on (default 7860, Render will override with PORT env var)
